[package]
name = "dystonse-curves"
version = "0.1.0"
authors = ["Lena Schimmel <mail@lenaschimmel.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
assert_approx_eq = "1.1.0"
fixed = "0.5.7"
half = "1.6.0"
gnuplot = "0.0.36"
rand = "0.7.3"
itertools = "0.9.0"